# serial-framing-protocol-rs

./: Cargo.toml  Makefile.toml  README.md
examples/: client.rs  server.rs
src/: crc.rs  driver.rs  lib.rs  macros.rs  packet.rs  rawpacket.rs  testutils.rs  traits.rs
